--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "online-stats",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Online algorithms for data exploration and analysis (piece-by-piece)",
   "main": "index.js",
   "dependencies": {
     "online-max": "^1.0.0",
     "online-mean": "^1.0.1",
+    "online-median": "^1.0.1",
     "online-min": "^1.0.1",
     "online-variance": "^1.0.0"
   },
