Add std & covariance

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "online-stats",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Online algorithms for data exploration and analysis (piece-by-piece)",
   "main": "index.js",
   "dependencies": {
+    "online-covariance": "^1.0.2",
     "online-max": "^1.0.0",
     "online-mean": "^1.0.1",
     "online-median": "^1.0.1",
     "online-min": "^1.0.1",
+    "online-std": "^1.0.1",
     "online-variance": "^1.0.0"
   },
   "devDependencies": {
