Add new modules

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "online-covariance": "^1.0.2",
+    "online-group": "0.0.1",
     "online-max": "^1.0.0",
     "online-mean": "^1.0.1",
     "online-median": "^1.0.1",
     "online-min": "^1.0.1",
+    "online-series": "0.0.1",
     "online-std": "^1.0.1",
     "online-variance": "^1.0.0"
   },
