--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "online-stats",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Online algorithms for data exploration and analysis (piece-by-piece)",
   "main": "index.js",
   "dependencies": {
     "online-autocovariance": "^0.0.1",
+    "online-count": "^0.0.2",
     "online-covariance": "^1.0.2",
     "online-group": "^0.0.1",
     "online-lag": "^0.0.3",
